# the-search-thing

./: .env.enc  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  Roadmap.md  Todo.md  api.py  file_types.json  future_impl.md  helix.toml  ignore.json  main.py  notes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  search.py  skills-lock.json  todo.md  tsconfig.json  tsconfig.options.json  walk.py
.agents/skills/helix-memory-system/: EXAMPLES.md  EXAMPLES.rust.md  REFERENCE.md  SKILL.md
.agents/skills/helix-query-from-cypher/: SKILL.md
.agents/skills/helix-query-from-gremlin/: SKILL.md
.agents/skills/helix-query-from-hql/: EXAMPLES.md  REFERENCE.md  SKILL.md
.agents/skills/helix-query-json-dynamic/: EXAMPLES.md  REFERENCE.md  SKILL.md
.agents/skills/helix-query-rust/: SKILL.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.repos/: fff
apps/web/: index.html  package.json  vite.config.ts
backend/: app.py  entrypoint.py  search.py
backend/indexer/: file_indexer.py  indexer.py  pdf_indexer.py
backend/services/: indexing.py  indexing_status.py  search.py  thumbnails_cache.py
backend/utils/: clients.py
client/: README.md  TODO.md  build-backend-win.mjs  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.web.json  tsconfig.web.tsbuildinfo
client/app/: AppContext.tsx  app.tsx  index.html  renderer.tsx
client/lib/: whimsy-loader.ts
config/: file_types.json
db/: MIGRATION_V2.md  queries.hx  queries_v2.rs  queries_v2.rs.example  schema.hx  schema_v2.rs  schema_v2.rs.example
docs/: REMOVE_SECRETS_FROM_HISTORY.md  native-ipc-and-gpui.md
docs/adr/: 0001-effect-backend.md  0002-extract-first-liteparse.md
electron/: package-lock.json  package.json  tsconfig.json
electron-react-app-main/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
electron-react-app-main/app/: app.tsx  renderer.tsx
electron/src/: index.ts  renderer.ts
indexer/: audio_indexer.py  file_indexer.py  image_indexer.py  indexer.py
json/: ignore.json
scripts/: prepare-effect.sh
src/: aud.rs  filetype_check.rs  helpers.rs  img.rs  lib.rs  read_file.rs  vid.rs  walk.rs
src/sidecar/: mod.rs  native_ipc.rs
tests/: sidecar_native_ipc.rs
tui/: package.json  tsconfig.json
tui/src/: index.ts
website/: .gitignore  .oxfmtrc.json  README.md  index.html  main.js  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
website/src/: index.tsx  style.css
(+112 files in other folders)
