[package]
# `name` here is name of the package.
name = "the_search_thing"
# these are good defaults:
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "the_search_thing"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
walkdir = "2.5.0"
rayon = "1.11.0"
file_type = "0.8.11"
aubio-rs = "0.2.0"
symphonia = { version = "0.5.5", features = ["all"] }
[features]
default = ["python"]
python = []
