[package]
# `name` here is name of the package.
name = "the_search_thing"
# these are good defaults:
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
rayon = "1.11.0"
file_type = "0.8.11"
image = "0.25.9"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bincode = "1.3"
ureq = "2.10.1"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.89"
sha2 = "0.10.9"
helix-rs = "0.1.9"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
uuid = { version = "1", features = ["v4"] }
dotenv = "0.15"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
thiserror = "2"

[[bin]]
name = "the-search-thing-sidecar"
path = "src/bin/the-search-thing-sidecar.rs"

[dev-dependencies]
rand = "0.9"
tempfile = "3"
