[project]
name = "the-search-thing"
version = "0.1.0"
description = "the fastest search tool for your OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128.0",
  "google-genai>=1.61.0",
  "groq>=1.0.0",
  "helix-py>=0.2.31",
  "python-dotenv>=1.2.1",
  "uvicorn>=0.40.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
name = "the-search-thing"
version = "0.1.0"
description = "the fastest search tool for your OS"
readme = "README.md"
requires-python = ">=3.11"
features = ["pyo3/extension-module"]
